css/style.css
/* TODO Gridify https: //css-tricks.com/snippets/css/complete-guide-grid/ */

:root {
    --twitch-color: #6541A5;
    --twitter-color: #6CADDE;
    --youtube-color: #CC181E;
    --github-color: #171515;
    --warning-color: #EB5B5B;

    --white-rgb: 255, 255, 255;
    --light-white-rgb: 128, 128, 128;
    --dark-gray-rgb: 50, 50, 50;
    --darker-gray-rgb: 35, 35, 35;
    --black-rgb: 0, 0, 0;

    /* Source: https://binaryify.github.io/OneDark-Pro/#/?id=colors-config */
    --code-bg: #282C34;
    --code-red: #f44747;
    --code-purple: #c678dd;
    --code-gold: #e5c07b;
    --code-gray: #7f848e;
    --code-cyan: #56b6c2;
    --code-green: #98c379;
    --code-blue: #61afef;
}

:target {
    /* TODO Change color to something more visible (and possible animate?) */
    text-shadow: -1px 0  rgb(var(--black-rgb)),
                  0 1px  rgb(var(--black-rgb)),
                  1px 0  rgb(var(--black-rgb)),
                  0 -1px rgb(var(--black-rgb));
}

@media screen and (max-width: 850px) {
    #left {
        width: 0 !important;
        display: none;
    }

    #right {
        width: 90% !important;
    }

    /* TODO: Display navbar buttons */
    nav .icons {
        display: none;
    }

    .desktop-only {
        display: none;
    }

    /* TODO: Do only for single article (not on main blog page) */
    /*article {
        margin-bottom: 6em;
    }*/
}

html, body {
    padding: 0;
    margin: 0;
    width: 100%;

    color: rgb(var(--white-rgb));
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    /* background: url("/images/bg.webp"), url("/images/bg.jpg"); */
    background: #555 url("/images/bg.jpg");
    background-size: cover;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-position: center;
}

a, a:visited {
    color: rgb(var(--white-rgb));
}

ul, ol {
    display: inline-block;
    text-align: left;

    max-width: 80%;
    word-break: break-word;
}

button {
    cursor: pointer;
    color: rgb(var(--dark-gray-rgb));
    background: rgba(var(--white-rgb), 0.9);
    border-radius: 3px;
    border: 1px solid rgb(var(--darker-gray-rgb));
    padding: 5px;
}

img {
    display: block;
    margin: 10px auto;
    border-radius: 5px;
    object-fit: contain;
    /* width: calc(100% - 40px); */
    border: 2px solid rgba(var(--darker-gray-rgb), 0.8);
}

article {
    background: rgba(var(--light-white-rgb), 0.4);
    max-width: 1280px;
    margin: 2em auto;
    padding: 10px;
    border: 2px solid rgb(var(--darker-gray-rgb));
    border-radius: 10px;
}

article p {
    width: 80%;
    text-align: left;
    text-indent: 2em;
    margin: 10px auto;
}

hr {
    width: 78%;
    /* border: 0; */
    height: 1px;
    /* background: #333; */
    /* background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc);
        background-image: -moz-linear-gradient(left, #ccc, #333, #ccc);
        background-image: -ms-linear-gradient(left, #ccc, #333, #ccc);
        background-image: -o-linear-gradient(left, #ccc, #333, #ccc); */
}

code {
    display: block;
    margin: 0 auto;
    padding: 10px;
    text-align: left;
    text-indent: 0;
    background: var(--code-bg);
    border-radius: 5px;
    max-width: 95%;

    page-break-inside: avoid;
    line-height: 1.0;
    width: fit-content;
    width: -moz-fit-content;

    overflow: auto;
    white-space: pre;
    /* TODO: Overlay over text? if scrollbar present? */
    /* box-shadow: inset -15px 0px 10px 0 rgba(1, 1, 1, 0.3); */
}

code.inline {
    display: inline;
    padding: 2px 4px;
    margin: 0;

    overflow: initial;
    white-space: pre-wrap;
}

code .red { color: var(--code-red); }
code .purple { color: var(--code-purple); }
code .gold { color: var(--code-gold); }
code .gray { color: var(--code-gray); }
code .cyan { color: var(--code-cyan); }
code .green { color: var(--code-green); }
code .blue { color: var(--code-blue); }

table {
    padding: 10px;
    margin: 0 auto;
    text-align: center;
    border-collapse: collapse;
    margin-bottom: 10px;
}

thead {
    border-bottom: 1px solid rgba(var(--white-rgb), 0.5);
}

tbody tr {
    line-height: 1.5;
}

tbody tr:nth-child(odd) {
    background-color: rgba(var(--darker-gray-rgb), 0.75);
}

tbody tr:nth-child(even) {
    background-color: rgba(var(--dark-gray-rgb), 0.3);
}

tbody tr td {
    border-left: 2px solid rgba(var(--white-rgb), 0.5);
    border-right: 2px solid rgba(var(--white-rgb), 0.5);
    text-align: left;
}

tbody tr td:first-child {
    padding-left: 5px;
    padding-right: 10px;
}

tbody tr:last-of-type {
    border-bottom: 1px solid rgba(var(--white-rgb), 0.5);
}

details > :last-child {
    padding-bottom: 20px;
}

details {
    width: 80%;
    margin: 20px auto;
    background: rgba(var(--dark-gray-rgb), 0.5);
}

details summary {
    cursor: pointer;
    background: rgb(var(--darker-gray-rgb));
}

details[open] {
    padding-bottom: 10px;
}

details[open] summary {
    margin-bottom: 10px;
}


details code {
    margin-top: 5px;
    width: inherit;
}

blockquote {
    width: 75%;
    display: block;
    text-align: left;
    border-left: 4px solid rgb(var(--white-rgb));
    margin: 1.5em auto;
    padding: 0.5em 1em;
}

nav {
    height: 64px;
    width: 100%;
    z-index: 999;
    line-height: 64px;
    position: fixed;
    background: rgba(var(--darker-gray-rgb), 0.8);
    border-bottom: 2px solid rgb(var(--darker-gray-rgb));
}

nav .title {
    padding-left: 20px;
    text-decoration: none;
    font-size: 2em;
}

nav .icons {
    float: right;
    font-size: 3em;
}

nav .icons a {
    position: relative;
    height: 64px;
    width: 120px;
    margin: 0;
    box-sizing: border-box;
    float: right;
    text-align: center;
    font-size: 0.5em;
    text-decoration: none;
    transition: background 0.8s;
}

.icons a svg { transition: fill 0.5s ease; }
.icons a .twitter:hover { fill: var(--twitter-color); }
.icons a .twitch:hover { fill: var(--twitch-color); }
.icons a .github:hover { fill: var(--github-color); }

nav .icons a:hover {
    background: rgba(var(--white-rgb), 0.30);
    transition: background 1s;
}

nav .icons a:hover {
    stroke-width: 1;
    stroke: rgb(var(--white-rgb));
}

.icon {
    height: 45px;
    width: 120px;
    padding: 10px 0;
    fill: rgb(var(--white-rgb));
}

.center {
    text-align: center;
}

.title {
    margin-bottom: 0;
}

.date {
    margin-top: 0;
}

.warning {
    color: var(--warning-color);
}

.stroke {
    text-shadow:
    -1px -1px 0 #000,
     1px -1px 0 #000,
    -1px  1px 0 #000,
     1px  1px 0 #000;
}

#gototop {
    display: none;
    position: fixed;
    z-index: 99;
    bottom: 15px;
    right: 15px;
    width: 30px;
    height: 30px;
    padding: 15px;
    font-size: 18px;
    cursor: pointer;
    background-color: rgb(var(--dark-gray-rgb));
    border: 3px solid rgb(var(--darker-gray-rgb));
    border-radius: 4px;
    fill: rgb(var(--white-rgb));
}

#copyright {
    position: fixed;
    width: fit-content;
    width: -moz-fit-content;
    left: 0;
    bottom: 0;
    text-align: left;
    height: 30px;
    line-height: 30px;
    padding: 10px;
}


#left {
    width: 20%;
    height: 100%;
    float: left;
    text-align: center;
    position: fixed;
    background-color: rgba(var(--dark-gray-rgb), 0.7);
    border-right: 3px solid rgb(var(--darker-gray-rgb));
}

#left .content {
    margin: 0 5%;
    position: relative;
}

#left .content h1 {
    padding-top: 100px;
}

#right {
    width: 70%;
    height: 100%;
    float: right;
    margin-top: 50px;
    padding: 0 5%;
    text-align: center;
}

spoiler, spoiler * {
    padding: 1px 5px;
    background: black !important;
    color: black !important;
    user-select: none;
    cursor: pointer;
}

spoiler[active], spoiler[active] * {
    background: rgba(var(--darker-gray-rgb), 0.3);
    color: inherit !important;
    user-select: inherit !important;
    /* cursor: default; */
}

